# Shinshi

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pylintrc  .service  Dockerfile  LICENSE  README.md  app.env.example  database.env.example  docker-compose.yaml  logging.yaml  memray-flamegraph-output.html  pyproject.toml  requirements.txt
.github/: dependabot.yml
.run/: Dockerfile.run.xml  Main.run.xml
assets/: .gitignore  README.md
config/: logging.json
docker/: .dockerignore  Dockerfile  docker-compose.yaml
i18n/: default.yaml  en_GB.yaml  ru.yaml
logging/: configuration.yaml
resources/: banner.txt  emojis.yaml  logging.json
resources/i18n/: README.md  en-US.json  en_US.yaml  ru.json  ru.yaml
resources/images/icons/: README.md
resources/l10n/: default.yaml  ru.yaml
secrets/: app.env.example
shinshi/: __init__.py  __main__.py  banner.txt  bot.py  client.py  colour.py  constants.py  context.py  environment.py  kernel.py  locale.py  localization_provider.py  memory_usage.py  runtime.py
shinshi/aio/: loop.py
shinshi/aiohttp/: http_pool.py
shinshi/asyncio/: __init__.py  event_policy.py  loop.py
shinshi/bot/: .env.example  .gitignore  README.md  __init__.py  bot.py  bot_meta.py  bot_service.py  cache.py  client.py  constants.py  logging.yaml  main.py  pyproject.toml  shinshi.service
shinshi/bot/resources/: emojis.yaml
shinshi/bot/resources/i18n/: en_GB.yaml
shinshi/bot/shinshi/: __init__.py  __main__.py
shinshi/bot/shinshi/abc/bot/: ibot_service.py
shinshi/bot/shinshi/abc/config/: iconfiguration_service.py
shinshi/bot/shinshi/abc/database/: idatabase_service.py
shinshi/bot/shinshi/abc/extensions/: extension.py  iextensions_manager.py  iextensions_service.py
shinshi/bot/shinshi/abc/http/: ihttp_service.py
shinshi/bot/shinshi/abc/i18n/: ii18n_provider.py  ilocale.py
shinshi/bot/shinshi/abc/kernel/: ikernel.py  kernel_aware.py
shinshi/bot/shinshi/abc/kernel/types/: kernel_aware.py
shinshi/bot/shinshi/abc/models/: context.py  version.py
shinshi/bot/shinshi/abc/services/: iservice.py
shinshi/bot/shinshi/extensions/general/: consts.py
shinshi/bot/shinshi/extensions/general/commands/: __init__.py  about_command.py  source_command.py  stats_command.py  support_command.py
shinshi/bot/shinshi/extensions/general/utils/: get_cpu_usage.py  get_memory_usage.py  round_to_significant_digit.py
shinshi/bot/shinshi/extensions/moderation/commands/: __init__.py  kick_command.py
shinshi/bot/shinshi/extensions/moderation/hooks/: kick_hook.py
shinshi/bot/shinshi/extensions/moderation/utils/: get_audit_reason.py
shinshi/bot/shinshi/extensions/utilities/commands/: __init__.py  emoji_command.py  user_command.py
shinshi/bot/shinshi/framework/: kernel.py
shinshi/bot/shinshi/framework/bot/: bot.py  bot_service.py  cache.py  client.py
shinshi/bot/shinshi/framework/commands/: command_builder.py  command_handler.py  locales.py
shinshi/bot/shinshi/framework/config/: configuration_service.py
shinshi/bot/shinshi/framework/context/: context.py
shinshi/bot/shinshi/framework/database/: database_service.py
shinshi/bot/shinshi/framework/extensions/: extension.py  extensions_manager.py  extensions_service.py
shinshi/bot/shinshi/framework/http/: http_service.py  ihttp_service.py
shinshi/bot/shinshi/framework/i18n/: i18n_provider.py  locale.py  localized.py
shinshi/bot/shinshi/framework/interaction/: context.py
shinshi/bot/shinshi/framework/types/: singleton.py
shinshi/bot/shinshi/utils/: emoji.py  emojis.py  env.py  icons.py  logging.py  loop.py  timestamp.py  version.py
shinshi/cache/: cache.py
shinshi/commands/: about.py
shinshi/data/: __init__.py  data_provider.py
shinshi/decorators/: event.py
shinshi/di/: exceptions.py  injection.py
shinshi/discord/: __init__.py  bot.py  constants.py  interaction_processor.py  locale.py
shinshi/discord/bot/: __init__.py  base_bot.py  bot.py  bot_base.py  bot_meta.py  bot_service.py  cache.py  ux.py
shinshi/discord/context/: typing.py
shinshi/discord/converters/: __init__.py  option_converter.py  slash_command_converter.py  sub_command_converter.py
shinshi/discord/enum/: translation_type.py
shinshi/discord/exceptions/: __init__.py  exception_handler.py  interaction_exception.py  unknown_exception.py
shinshi/discord/interactables/: command.py  group.py  interactable.py  slash_command.py
shinshi/discord/interaction/: __init__.py  interaction_context.py  interaction_exception.py  interaction_processor.py  utils.py
shinshi/discord/models/: interaction_context.py  interaction_i18n.py  translatable.py
shinshi/discord/processors/: __init__.py  command_processor.py  exception_processor.py  slash_command_processor.py
shinshi/discord/typing/: hook.py  (+1 more)
shinshi/dotenv/: __init__.py  load.py  parse.py
shinshi/enums/: colour.py
shinshi/events/: __init__.py  _event_manager.py  event_listener.py  lifetime_events.py  meta_class.py  on_command_error.py  on_shard_ready.py
shinshi/ext/: __init__.py  colour.py
shinshi/framework/: environment.py  kernel.py
shinshi/http/: __init__.py  constants.py  http_pool_client.py
shinshi/i18n/: __init__.py  constants.py  i18n_group.py  i18n_provider.py  types.py
shinshi/l10n/: __init__.py  locale.py  localization_provider.py
shinshi/logging/: __init__.py  console_colors.py  constants.py  logger_factory.py
shinshi/logs/: __init__.py  logger.py
shinshi/managers/: __init__.py  extension_manager.py
shinshi/resources/: configuration.yaml.example
shinshi/sdk/: bot.py  cache.py  client.py  context.py  event.py
shinshi/types/: context.py  events.py  extension.py
shinshi/utils/: __init__.py  aiohttp.py  class_name.py  codeblock.py  datetime.py  dotenv.py  git.py  icon.py  icons.py  int.py  logging.py  loop.py  memory_usage.py  number.py  oauth.py  size.py  string.py  version.py
shinshi/workflows/: __init__.py
shinshi_core/: __init__.py
shinshi_core/sdk/: environment.py
shinshi_events/: __init__.py
shinshi_extensions/: __init__.py
shinshi_main/: __init__.py  __main__.py
src/shinshi/: __main__.py  version.py
(+180 files in other folders)
