[project]
name = "shinshi"
version = "20.0.0.dev1"
description = "A modern and user-friendly Discord bot designed to give you and your servers great functionality and stable performance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aurum-hikari",
    "hikari>=2.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
speedups = ["uvloop>=0.18.0", "hikari[speedups]>=2.0.0"]

[tool.uv.sources]
aurum-hikari = { git = "https://github.com/ShinshiDevs/aurum-hikari", rev = "unstable" }
