[project]
name = "bot"
version = "20.0.0.dev1"
description = "Runtime of the Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.2.0",
    "yarl>=1.17.0",
    "orjson>=3.10.10",
    "pyyaml>=6.0.2",
    "aiohttp[speedups]>=3.10.10",
    "python-dotenv>=1.0.1",
    "hikari[speedups]>=2.1.0",
    "aurum-hikari",
    "tortoise-orm[asyncpg]>=0.21.7",
    "humanize>=4.11.0",
    "psutil>=6.1.0",
    "uvloop>=0.20.0 ; os_name != 'nt'",
]

[tool.uv]
dev-dependencies = [
 "pyright>=1.1.389",
 "ruff>=0.7.1",
]

[tool.uv.sources]
aurum-hikari = { git = "https://github.com/ShinshiDevs/aurum-hikari.git", rev = "unstable" }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
